--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ferrari</title>
   <link rel="stylesheet" href="style.css">
+  <link id="image-head" rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+
 </head>
 <body>
 
+  <!-- Vanessa header -->
+
+
+  <!-- Andres Pizo hacia abajo -->
 
 
   <script src="app.js"></script>
