--- a/index.html
+++ b/index.html
@@ -47,33 +47,35 @@
     </h1>
   </div>
 
-
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>ARRANCA EL MOTOR</h5>
+          <p>Descubre la gama Ferrari.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>SCUDERIA FERRARI</h5>
+          <p>PARA SABER MAS.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <p>PARA SABER MAS.</p>
         </div>
       </div>
     </div>
@@ -87,7 +89,97 @@
     </button>
   </div>
 
+  <div id="carouselExampleCaptions2" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
 
+        <div class="row">
+
+          <div class="col-sm-6">
+
+            <h1>FERRAR SECOND AT 6 HOURS OF PORTIMAO</h1>
+            <p>The Ferrari 499P of Antonio Fuoco,
+              Miguel Molina and Nicklas Nielsen finished second at the 6 Hours of Portimao, the firt European round of
+              the FIA World Endurance Championship.
+            </p>
+
+          </div>
+
+
+          <div class="col-sm-6">
+
+            <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
+
+
+          </div>
+
+        </div>
+
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+
+          <div class="col-sm-6">
+
+            <h1>DIVERSUPON EN LA NIEVE</h1>
+            <p>
+              Tenemos la oportunidad privilegiada de ver a dos pilotos con pedigrí -Andrea Bertolini, campeón de GT y
+              piloto oficial de Ferrari, y Lilou Wadoux, estrella emergente de GT-enfrentándose a carreteres heladas
+              mientras ponen a prueba el Purosangue.
+            </p>
+
+          </div>
+
+
+          <div class="col-sm-6">
+
+            <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
+
+
+          </div>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+
+          <div class="col-sm-6">
+
+            <h1>AUSTRALIAN GRAND PRIX-A STEP FORWARD, BUT NOT IN THE STANDINGS</h1>
+            <p>
+              Scuderia Ferraro leaves Australia without any points, having clearly demonstrated that it has made
+              progress in terms of race pace compared to the opening tho rounds
+            </p>
+
+          </div>
+
+
+          <div class="col-sm-6">
+
+            <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
