--- a/index.html
+++ b/index.html
@@ -180,7 +180,52 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
+  <main>
+    <div class="contenedor-imagenes">
+      <section class="imagen">
+        <img src="/img/logo.png" alt="Imagen 1">
+        <h2 class="nombre">Nombre de la imagen 1</h2>
+        <div class="mas-informacion">
+          <p>Para más información <span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="https://via.placeholder.com/300x200.png?text=Imagen+2" alt="Imagen 2">
+        <h2 class="nombre">Nombre de la imagen 2</h2>
+        <div class="mas-informacion">
+          <p>Para más información <span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="https://via.placeholder.com/300x200.png?text=Imagen+3" alt="Imagen 3">
+        <h2 class="nombre">Nombre de la imagen 3</h2>
+        <div class="mas-informacion">
+          <p>Para más información <span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="https://via.placeholder.com/300x200.png?text=Imagen+4" alt="Imagen 4">
+        <h2 class="nombre">Nombre de la imagen 4</h2>
+        <div class="mas-informacion">
+          <p>Para más información <span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="https://via.placeholder.com/300x200.png?text=Imagen+5" alt="Imagen 5">
+        <h2 class="nombre">Nombre de la imagen 5</h2>
+        <div class="mas-informacion">
+          <p>Para más información <span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="https://via.placeholder.com/300x200.png?text=Imagen+6" alt="Imagen 6">
+        <h2 class="nombre">Nombre de la imagen 6</h2>
+        <div class="mas-informacion">
+          <p>Para más información <span class="flecha"></span></p>
+        </div>
+      </section>
+    </div>
+  </main>
 
 
 
