Se cambia segundo video

--- a/index.html
+++ b/index.html
@@ -389,13 +389,9 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
 
-        <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
+        <img class="img" src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
 
-        <!-- <video autoplay muted playsinline loop>
-          <source src="video/video1.mp4" type="video/mp4">
-        </video> -->
-
-        <video class="d-block w-100" autoplay muted loop>
+        <video autoplay muted playsinline loop>
           <source src="video/video1.mp4" type="video/mp4">
         </video>
         
@@ -406,9 +402,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
+        <img class="img" src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
         <video class="d-block w-100" autoplay muted loop>
-          <source src="video/video1.mp4" type="video/mp4">
+          <source src="video/video2.mp4" type="video/mp4">
         </video>
         <div class="carousel-caption d-none d-md-block">
           <h5>SCUDERIA FERRARI</h5>
@@ -416,9 +412,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
+        <img class="img" src="img/logo.png" class="d-block w-100" alt="..." width="400px" height="400px">
         <video class="d-block w-100" autoplay muted loop>
-          <source src="video/video1.mp4" type="video/mp4">
+          <source src="video/video3.mp4" type="video/mp4">
         </video>
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
@@ -471,7 +467,7 @@
 
           <div class="col-sm-6">
 
-            <img src="https://cdn.ferrari.com/cms/network/media/img/resize/643c40363200100023f9da1e-ferrari-second-at-6-hours-of-portimao-gtw-2?width=530&height=597" class="d-block w-100" alt="..." width="250px" height="300px">
+            <img class="img-carousel" src="https://cdn.ferrari.com/cms/network/media/img/resize/643c40363200100023f9da1e-ferrari-second-at-6-hours-of-portimao-gtw-2?width=530&height=597" class="d-block w-100" alt="..." width="250px" height="300px">
 
 
           </div>
@@ -500,7 +496,7 @@
 
           <div class="col-sm-6">
 
-            <img src="https://cdn.ferrari.com/cms/network/media/img/resize/6437f68ab8e904002276d512-2023-ferrari-snowfun-thumb-p?width=530&height=597" class="d-block w-100" alt="..." width="400px" height="400px">
+            <img class="img-carousel" src="https://cdn.ferrari.com/cms/network/media/img/resize/6437f68ab8e904002276d512-2023-ferrari-snowfun-thumb-p?width=530&height=597" class="d-block w-100" alt="..." width="400px" height="400px">
 
 
           </div>
@@ -527,7 +523,7 @@
 
           <div class="col-sm-6">
 
-            <img src="https://cdn.ferrari.com/cms/network/media/img/resize/64295f6ddee8080023241148-2023-ferrari-australian-grand-prix-race-report-gtw2?width=530&height=597" class="d-block w-100" alt="..." width="400px" height="400px">
+            <img class="img-carousel" src="https://cdn.ferrari.com/cms/network/media/img/resize/64295f6ddee8080023241148-2023-ferrari-australian-grand-prix-race-report-gtw2?width=530&height=597" class="d-block w-100" alt="..." width="400px" height="400px">
 
           </div>
 
