Se actualiza ejercicio

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </video>
         <div class="carousel-caption d-none d-md-block">
           <h5>SCUDERIA FERRARI</h5>
-          <p>PARA SABER MAS.</p>
+          <a class="text-white text-decoration-none" href="https://www.ferrari.com/en-CO/formula1"><p>PARA SABER MAS.</p></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -418,7 +418,7 @@
         </video>
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
-          <p>PARA SABER MAS.</p>
+          <a class="text-white text-decoration-none" href="https://store.ferrari.com/es-es/explore/collection-spring-summer-2023?from=GWvideo_Style"><p>PARA SABER MAS.</p></a>
         </div>
       </div>
     </div>
