--- a/index.html
+++ b/index.html
@@ -192,48 +192,52 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <!-- vanesaaaaaaaaaaaaaaaaa -->
   <main>
+
     <div class="contenedor-imagenes">
+      
       <section class="imagen">
-        <img src="/img/logo.png" alt="Imagen 1">
-        <h2 class="nombre">Nombre de la imagen 1</h2>
+        <img src="/img/64415b1c0d03c2002355e8d2-ferrari-store-dresses-and-jumpsuits-2023-l.jpg" alt="Imagen 1">
+        <h2 class="nombre">MATERIALES INNOVADORES</h2>
+        <div class="mas-informacion">
+          <p>EXPLORAA<span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="/img/64246b2cddb9da0022d69431-ferrari-roma-spider-magazine-news-tofm-split-desk.png" alt="Imagen 2">
+        <h2 class="nombre">POTENCIA CONVERTIBLE</h2>
+        <div class="mas-informacion">
+          <p>EXPLORA <span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="/img/62bee9b5f93ef93eb2a0a714-ferrari-pre-owned-488-spider-split-banner-gate-july-2022-desk.png" alt="Imagen 3">
+        <h2 class="nombre">PRE-OWNED</h2>
+        <div class="mas-informacion">
+          <p>EXPLORA<span class="flecha"></span></p>
+        </div>
+      </section>
+      <section class="imagen">
+        <img src="/img/6424510f3e150100222cbc6c-ferrari-corso-pilota-sport-box-gate.png" alt="Imagen 4">
+        <h2 class="nombre">CORSO PILOTA</h2>
         <div class="mas-informacion">
           <p>Para más información <span class="flecha"></span></p>
         </div>
       </section>
       <section class="imagen">
-        <img src="https://via.placeholder.com/300x200.png?text=Imagen+2" alt="Imagen 2">
-        <h2 class="nombre">Nombre de la imagen 2</h2>
+        <img src="/img/6409c1b8c03a600022ea4f0b-ferrari-499p-debut-wec-box-gate-desk.png" alt="Imagen 5">
+        <h2 class="nombre">THE FERRARI 499P IN THE FIA WEC</h2>
         <div class="mas-informacion">
-          <p>Para más información <span class="flecha"></span></p>
+          <p>DISCOVER DE WORD ENDURANCE CHAMPIONSHIP<span class="flecha"></span></p>
         </div>
       </section>
       <section class="imagen">
-        <img src="https://via.placeholder.com/300x200.png?text=Imagen+3" alt="Imagen 3">
-        <h2 class="nombre">Nombre de la imagen 3</h2>
+        <img src="/img/63638e831b573e645cbb592b-ferrari-past-mode-f50-gate-box-2022-nov-desk-def (1).jpg" alt="Imagen 6">
+        <h2 class="nombre">MODELOS DEL PASADO</h2>
         <div class="mas-informacion">
-          <p>Para más información <span class="flecha"></span></p>
-        </div>
-      </section>
-      <section class="imagen">
-        <img src="https://via.placeholder.com/300x200.png?text=Imagen+4" alt="Imagen 4">
-        <h2 class="nombre">Nombre de la imagen 4</h2>
-        <div class="mas-informacion">
-          <p>Para más información <span class="flecha"></span></p>
-        </div>
-      </section>
-      <section class="imagen">
-        <img src="https://via.placeholder.com/300x200.png?text=Imagen+5" alt="Imagen 5">
-        <h2 class="nombre">Nombre de la imagen 5</h2>
-        <div class="mas-informacion">
-          <p>Para más información <span class="flecha"></span></p>
-        </div>
-      </section>
-      <section class="imagen">
-        <img src="https://via.placeholder.com/300x200.png?text=Imagen+6" alt="Imagen 6">
-        <h2 class="nombre">Nombre de la imagen 6</h2>
-        <div class="mas-informacion">
-          <p>Para más información <span class="flecha"></span></p>
+          <p>PARA SABER MAS<span class="flecha"></span></p>
         </div>
       </section>
     </div>
