--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Pagina oficial de Ferrari</title>
   <link rel="stylesheet" href="css/style.css">
   <link id="image-head" rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -345,7 +348,7 @@
 
 
 
-  <div class="contenedor">
+  <div class="contenedor" data-aos="fade-up">
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-transparent bg-opacity-0.5">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -449,7 +452,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
 
-        <div class="row">
+        <div class="row" data-aos="fade-up">
 
           <div class="col-sm-6">
 
@@ -558,23 +561,10 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-  <!-- FOOTER -->
-
-
   <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: rgb(26, 25, 25);">
+  <footer class="text-center text-white" style="background-color: rgb(26, 25, 25);" data-aos="fade-up">
     <!-- Grid container -->
-    <div class="container p-4">
+    <div class="container p-5">
       <!-- Section: Form -->
       <section class="">
         <form action="">
@@ -588,7 +578,7 @@
       <!-- Section: Links -->
       <section class="">
         <div class="row text-center m-3">
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ml-5">
             <h5 class="text-uppercase">Auto</h5>
 
             <ul class="list-unstyled mb-0">
@@ -770,6 +760,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Enlaza el archivo de iconos de Font Awesome -->
   <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init(
+      {
+        duration: 300,
+        once: true
+      }
+    );
+  </script>
 
 
 </body>
