--- a/index.html
+++ b/index.html
@@ -664,9 +664,25 @@
 
           Copyright 2023 - All rights reserved</p>
       </div>
-      <!-- Copyright -->
   </footer>
-  <!-- Footer -->
+
+  <div class="bg-dark">
+    <p class="text-center mx-auto">
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/es-CO/legal">Nota Legal</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/es-CO/privacy-policy">Privacy Policy</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/es-CO/cookie-policy">Politica sobre Cookies</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://privacyportal-de.onetrust.com/webform/98d779e0-913c-4c73-b9fe-4e0e2e29c727/8311287a-be4e-4748-86c2-e12d7ccdf2db">Submit your privacy request</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/es-ES/contactenos">Contactos</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://media.ferrari.com/en/login/">Medios de comunicacion</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/en-EN/corporate/career">Empleo</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/en-EN/corporate">Corporate ENG</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/it-IT/corporate">Corporate ITA</a>
+      <a class="m-2 text-white text-decoration-none h5" href="https://www.ferrari.com/es-ES/responsible-disclosure-policy">Responsible Disolosure</a>
+    </p>
+    <div class="mx-auto shell">
+      <img class="text-center img-shell" src="img/shell.png" alt="" width="35px" height="25px">
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
